--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<link rel="stylesheet" href="index.css">
 	<meta charset="utf-8" />
 	<title>Table Style</title>
-	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width">
 </head>
 
 <body>
+<div id=”metamask”></div>
 <div class="table-title">
-<h3>Eleição do presidente do grêmio </h3>
+<h3>Eleição do presidente do grêmio</h3>
 </div>
 <table class="table-fill">
 <thead>
@@ -34,12 +35,12 @@
 </tr>
 </tbody>
 </table>
+
 <div class = "botao">
 	<input type="text" id="candidate" />
 	<a href="#" onclick="voteForCandidate()" class="btn btn-primary">Votar</a>
 </div>
-</body>
-<script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+</body>	
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
 <script src="./index.js"></script>
 </html>
