mudado o titulo do html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<link rel="stylesheet" href="index.css">
 	<meta charset="utf-8" />
-	<title>Table Style</title>
+	<title>Eleição Presidente do Grêmio</title>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width">
 </head>
 
